# drive-booking

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
checkpoints/: dqn_scheduling.pth
checkpoints/chatbot/: chatbot_q_learning.json
checkpoints/standalone/: q_learning_model.json
data/: centers.json  customer_profiles.json  questions.json  vehicles.json
resource/styles/: main.css
results/: evaluation_results.json  phase2_evaluation_results.json  phase2_training_history.json  phase3_results.json  training_results_20251206_152830.json
results/experiments/: experiment1_hyperparams.json  experiment2_synergy.json  experiment3_availability.json  final_improved_results.json  improved_integrated_results.json
src/: evaluate.py  evaluate_phase1.py  evaluate_phase3.py  integrated_system.py  streamlit_app.py  train_phase1.py  train_phase2.py  train_phase3.py
src/agents/: __init__.py  q_learning_agent.py  scheduling_agent.py
src/app/: main.py
src/baselines/: __init__.py  random_baseline.py  rule_based.py  scheduling_baselines.py
src/env/: __init__.py  recommendation_env.py  scheduling_env.py
src/experiments/: __init__.py  experiment_availability.py  experiment_hyperparams.py  experiment_synergy.py
src/utils/: customer_generator.py
src/visualization/: __init__.py  plot_phase3.py  plot_results.py
