[project]
name = "driving-test"
version = "0.1.0"
description = "강화학습 기반 자동차 시승 예약 통합 시스템"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]
